<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purchase"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <TextView
        android:id="@+id/sum_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum_title"
        android:textSize="20sp"
        android:padding="20dp"
        android:textAlignment="center"
        android:scaleType="centerCrop"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/price"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_tr"
        android:textSize="16sp"
        android:textAlignment="center"
        android:scaleType="centerCrop"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/sum_title"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textSize="16sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAlignment="center"
        android:scaleType="centerCrop"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/currency"/>


    <Button
        android:id="@+id/payButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payButton"
        android:textColor="@color/white"
        android:backgroundTint="@color/payButton"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp" />






</androidx.constraintlayout.widget.ConstraintLayout>
